--- a/src/UiPack/MainWindow.form
+++ b/src/UiPack/MainWindow.form
@@ -215,6 +215,9 @@
                   </Events>
                 </Component>
                 <Component class="javax.swing.JTextField" name="txt_total">
+                  <Events>
+                    <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txt_totalKeyPressed"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
@@ -494,6 +497,7 @@
                   </Properties>
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txt_req_boxActionPerformed"/>
+                    <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txt_req_boxKeyPressed"/>
                   </Events>
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabel6">
