fix text validation

--- a/src/UiPack/AboutPage.form
+++ b/src/UiPack/AboutPage.form
@@ -302,6 +302,7 @@
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel11MouseClicked"/>
+            <EventHandler event="mouseMoved" listener="java.awt.event.MouseMotionListener" parameters="java.awt.event.MouseEvent" handler="jLabel11MouseMoved"/>
           </Events>
         </Component>
       </SubComponents>
